Solucionado el problema de la selección de data. Estaba asociado a la definición de variables locales, se necesitó pasarlas a global.

--- a/Nueva_propuesta/Test_Analysis.ipynb
+++ b/Nueva_propuesta/Test_Analysis.ipynb
@@ -85,12 +85,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Option: 1"
+      "Option: 3"
      ]
     }
    ],
    "source": [
-    "int option=1; //option\n",
+    "Int_t option=3; //option\n",
     "cout << \"Option: \" << option;"
    ]
   },
@@ -120,7 +120,7 @@
     }
    ],
    "source": [
-    "int parallel=1; //option\n",
+    "Int_t parallel=1; //option\n",
     "cout << \"Option: \" << parallel;"
    ]
   },
@@ -133,142 +133,100 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WpqqWmlv\n",
-      "12\n"
+      " +++ Starting PROOF-Lite with 2 workers +++\n"
      ]
-    }
-   ],
-   "source": [
-    "%%python\n",
-    "#He pensado en iniciar el \"Run\" con python y la selección de los sample. Aún sin vincular.\n",
-    "##from ROOT import TString\n",
-    "import ROOT\n",
-    "option=2;\n",
-    "if (option == 0):\n",
-    "    sample = [\"data\",\"ZqqZll\",\"WqqZll\",\"WpqqWmlv\",\"WplvWmqq\",\"WlvZqq\",\"llll\",\"lllv\",\"llvv\",\"lvvv\",\"Zee\",\"Zmumu\",\"Ztautau\",\"single_top_tchan\",\"single_antitop_tchan\",\"single_top_schan\",\"single_antitop_schan\",\"single_top_wtchan\",\"single_antitop_wtchan\",\"ttbar_lep\",\"Wplusenu\",\"Wplusmunu\",\"Wplustaunu\",\"Wminusenu\",\"Wminusmunu\",\"Wminustaunu\",\"ggH125_ZZ4lep\",\"ZH125_ZZ4lep\",\"WH125_ZZ4lep\",\"VBF125_ZZ4lep\"]\n",
-    "if (option == 1):\n",
-    "    sample = [\"data\"]\n",
-    "if (option == 2):\n",
-    "    sample = [\"ZqqZll\",\"WqqZll\",\"WpqqWmlv\",\"WplvWmqq\",\"WlvZqq\",\"llll\",\"lllv\",\"llvv\",\"lvvv\",\"Zee\",\"Zmumu\",\"Ztautau\"]\n",
-    "if (option == 3):\n",
-    "    sample = [\"single_top_tchan\",\"single_antitop_tchan\",\"single_top_schan\",\"single_antitop_schan\",\"single_top_wtchan\",\"single_antitop_wtchan\",\"ttbar_lep\",\"Wplusenu\",\"Wplusmunu\",\"Wplustaunu\",\"Wminusenu\",\"Wminusmunu\",\"Wminustaunu\",\"ggH125_ZZ4lep\",\"ZH125_ZZ4lep\",\"WH125_ZZ4lep\",\"VBF125_ZZ4lep\"]\n",
-    "\n",
-    "print(sample[2])\n",
-    "print(len(sample))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "string event=\"none\";\n",
-    "int lengt=0;\n",
-    "void array_option(int option,int i,int& lengt,string& event) {\n",
-    "    //static int sample[30];\n",
-    "    if (option == 0) string sample[] = {\"data\",\"ZqqZll\",\"WqqZll\",\"WpqqWmlv\",\"WplvWmqq\",\"WlvZqq\",\"llll\",\"lllv\",\"llvv\",\"lvvv\",\"Zee\",\"Zmumu\",\"Ztautau\",\"single_top_tchan\",\"single_antitop_tchan\",\"single_top_schan\",\"single_antitop_schan\",\"single_top_wtchan\",\"single_antitop_wtchan\",\"ttbar_lep\",\"Wplusenu\",\"Wplusmunu\",\"Wplustaunu\",\"Wminusenu\",\"Wminusmunu\",\"Wminustaunu\",\"ggH125_ZZ4lep\",\"ZH125_ZZ4lep\",\"WH125_ZZ4lep\",\"VBF125_ZZ4lep\"};\n",
-    "    if (option == 1) {\n",
-    "        string sample[] = {\"data\"};\n",
-    "        //TChain *fChain = new TChain(\"mini\");\n",
-    "        //fChain = main_HZZAnalysis(parallel,sample[0]); //sustituido \"parallel\" por cero\n",
-    "    }\n",
-    "    if (option == 2) string sample[] = {\"ZqqZll\",\"WqqZll\",\"WpqqWmlv\",\"WplvWmqq\",\"WlvZqq\",\"llll\",\"lllv\",\"llvv\",\"lvvv\",\"Zee\",\"Zmumu\",\"Ztautau\"};\n",
-    "    if (option == 3) string sample[] = {\"single_top_tchan\",\"single_antitop_tchan\",\"single_top_schan\",\"single_antitop_schan\",\"single_top_wtchan\",\"single_antitop_wtchan\",\"ttbar_lep\",\"Wplusenu\",\"Wplusmunu\",\"Wplustaunu\",\"Wminusenu\",\"Wminusmunu\",\"Wminustaunu\",\"ggH125_ZZ4lep\",\"ZH125_ZZ4lep\",\"WH125_ZZ4lep\",\"VBF125_ZZ4lep\"};\n",
-    "    lengt=size(sample[]);\n",
-    "    event=sample[i];\n",
-    "}    \n",
-    "\n",
-    "for (int i=0; i<lengt;i++){\n",
-    "    TChain *fChain = new TChain(\"mini\");\n",
-    "    fChain = main_HZZAnalysis(parallel,event); //sustituido \"parallel\" por cero\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[1minput_line_36:4:8: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mexpected ';' after expression\u001b[0m\n",
-      "TStrign array_option(int option,int i,int& lengt,TString& event) {\n",
-      "\u001b[0;1;32m       ^\n",
-      "\u001b[0m\u001b[0;32m       ;\n",
-      "\u001b[0m\u001b[1minput_line_36:4:26: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mexpected '(' for function-style cast or type construction\u001b[0m\n",
-      "TStrign array_option(int option,int i,int& lengt,TString& event) {\n",
-      "\u001b[0;1;32m                     ~~~ ^\n",
-      "\u001b[0m\u001b[1minput_line_36:4:37: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mexpected '(' for function-style cast or type construction\u001b[0m\n",
-      "TStrign array_option(int option,int i,int& lengt,TString& event) {\n",
-      "\u001b[0;1;32m                                ~~~ ^\n",
-      "\u001b[0m\u001b[1minput_line_36:4:42: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mexpected '(' for function-style cast or type construction\u001b[0m\n",
-      "TStrign array_option(int option,int i,int& lengt,TString& event) {\n",
-      "\u001b[0;1;32m                                      ~~~^\n",
-      "\u001b[0m\u001b[1minput_line_36:4:50: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1m'TString' does not refer to a value\u001b[0m\n",
-      "TStrign array_option(int option,int i,int& lengt,TString& event) {\n",
-      "\u001b[0;1;32m                                                 ^\n",
-      "\u001b[0m\u001b[1m/home/student/ROOT/build/include/TGeoNode.h:24:7: \u001b[0m\u001b[0;1;30mnote: \u001b[0mdeclared here\u001b[0m\n",
-      "class TString;\n",
-      "\u001b[0;1;32m      ^\n",
-      "\u001b[0m"
+      "Opening connections to workers: 1 out of 2 (50 %)\r",
+      "Opening connections to workers: OK (2 workers)                 \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PROOF set to parallel mode (2 workers)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting up worker servers: 1 out of 2 (50 %)\r",
+      "Setting up worker servers: OK (2 workers)                 \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 Data escaneada: single_top_tchan. N-tuplas: 2\n",
+      "2 Data escaneada: single_antitop_tchan. N-tuplas: 2\n",
+      "3 Data escaneada: single_top_schan. N-tuplas: 2\n",
+      "4 Data escaneada: single_antitop_schan. N-tuplas: 2\n",
+      "5 Data escaneada: single_top_wtchan. N-tuplas: 56\n",
+      "6 Data escaneada: single_antitop_wtchan. N-tuplas: 48\n",
+      "7 Data escaneada: ttbar_lep. N-tuplas: 1031\n",
+      "8 Data escaneada: Wplusenu. N-tuplas: 41502\n",
+      "9 Data escaneada: Wplusmunu. N-tuplas: 35184\n",
+      "10 Data escaneada: Wplustaunu. N-tuplas: 1774\n",
+      "11 Data escaneada: Wminusenu. N-tuplas: 31893\n",
+      "12 Data escaneada: Wminusmunu. N-tuplas: 30307\n",
+      "13 Data escaneada: Wminustaunu. N-tuplas: 1409\n",
+      "14 Data escaneada: ggH125_ZZ4lep. N-tuplas: 164716\n",
+      "15 Data escaneada: ZH125_ZZ4lep. N-tuplas: 14485\n",
+      "16 Data escaneada: WH125_ZZ4lep. N-tuplas: 15379\n",
+      "17 Data escaneada: VBF125_ZZ4lep. N-tuplas: 191126\n"
      ]
     }
    ],
    "source": [
-    "TString event=\"none\";\n",
-    "int lengt=0;\n",
-    "TStrign array_option(int option,int i,int& lengt,TString& event) {\n",
-    "    //static int sample[30];\n",
-    "    if (option == 0) TString sample[] = {\"data\",\"ZqqZll\",\"WqqZll\",\"WpqqWmlv\",\"WplvWmqq\",\"WlvZqq\",\"llll\",\"lllv\",\"llvv\",\"lvvv\",\"Zee\",\"Zmumu\",\"Ztautau\",\"single_top_tchan\",\"single_antitop_tchan\",\"single_top_schan\",\"single_antitop_schan\",\"single_top_wtchan\",\"single_antitop_wtchan\",\"ttbar_lep\",\"Wplusenu\",\"Wplusmunu\",\"Wplustaunu\",\"Wminusenu\",\"Wminusmunu\",\"Wminustaunu\",\"ggH125_ZZ4lep\",\"ZH125_ZZ4lep\",\"WH125_ZZ4lep\",\"VBF125_ZZ4lep\"};\n",
-    "    if (option == 1) {\n",
-    "        TString sample[] = {\"data\"};\n",
-    "        //TChain *fChain = new TChain(\"mini\");\n",
-    "        //fChain = main_HZZAnalysis(parallel,sample[0]); //sustituido \"parallel\" por cero\n",
-    "    }\n",
-    "    if (option == 2) TString sample[] = {\"ZqqZll\",\"WqqZll\",\"WpqqWmlv\",\"WplvWmqq\",\"WlvZqq\",\"llll\",\"lllv\",\"llvv\",\"lvvv\",\"Zee\",\"Zmumu\",\"Ztautau\"};\n",
-    "    if (option == 3) TString sample[] = {\"single_top_tchan\",\"single_antitop_tchan\",\"single_top_schan\",\"single_antitop_schan\",\"single_top_wtchan\",\"single_antitop_wtchan\",\"ttbar_lep\",\"Wplusenu\",\"Wplusmunu\",\"Wplustaunu\",\"Wminusenu\",\"Wminusmunu\",\"Wminustaunu\",\"ggH125_ZZ4lep\",\"ZH125_ZZ4lep\",\"WH125_ZZ4lep\",\"VBF125_ZZ4lep\"};\n",
-    "    lengt=size(sample[]);\n",
-    "    event=sample[i];\n",
-    "}    \n",
+    "int nEvents,s_size=0;\n",
+    "TString sample[50] = {};\n",
     "\n",
-    "for (int i=0; i<lengt;i++){\n",
+    "if (option == 0) {\n",
+    "    TString aux[] = {\"data\",\"ZqqZll\",\"WqqZll\",\"WpqqWmlv\",\"WplvWmqq\",\"WlvZqq\",\"llll\",\"lllv\",\"llvv\",\"lvvv\",\"Zee\",\"Zmumu\",\"Ztautau\",\"single_top_tchan\",\"single_antitop_tchan\",\"single_top_schan\",\"single_antitop_schan\",\"single_top_wtchan\",\"single_antitop_wtchan\",\"ttbar_lep\",\"Wplusenu\",\"Wplusmunu\",\"Wplustaunu\",\"Wminusenu\",\"Wminusmunu\",\"Wminustaunu\",\"ggH125_ZZ4lep\",\"ZH125_ZZ4lep\",\"WH125_ZZ4lep\",\"VBF125_ZZ4lep\"};\n",
+    "    s_size = sizeof(aux)/sizeof(aux[0]);\n",
+    "    for (int i=0;i<s_size;i++) {\n",
+    "        sample[i]=aux[i];\n",
+    "    }\n",
+    "}\n",
+    "else if (option == 1) {\n",
+    "    TString aux[] = {\"data\"};\n",
+    "    s_size = sizeof(aux)/sizeof(aux[0]);\n",
+    "    for (int i=0;i<s_size;i++) {\n",
+    "        sample[i]=aux[i];\n",
+    "    }\n",
+    "}\n",
+    "else if (option == 2) {\n",
+    "    TString aux[] = {\"ZqqZll\",\"WqqZll\",\"WpqqWmlv\",\"WplvWmqq\",\"WlvZqq\",\"llll\",\"lllv\",\"llvv\",\"lvvv\",\"Zee\",\"Zmumu\",\"Ztautau\"};\n",
+    "    s_size = sizeof(aux)/sizeof(aux[0]);\n",
+    "    for (int i=0;i<s_size;i++) {\n",
+    "        sample[i]=aux[i];\n",
+    "    }\n",
+    "}\n",
+    "else if (option == 3) {\n",
+    "    TString aux[] = {\"single_top_tchan\",\"single_antitop_tchan\",\"single_top_schan\",\"single_antitop_schan\",\"single_top_wtchan\",\"single_antitop_wtchan\",\"ttbar_lep\",\"Wplusenu\",\"Wplusmunu\",\"Wplustaunu\",\"Wminusenu\",\"Wminusmunu\",\"Wminustaunu\",\"ggH125_ZZ4lep\",\"ZH125_ZZ4lep\",\"WH125_ZZ4lep\",\"VBF125_ZZ4lep\"};\n",
+    "    s_size = sizeof(aux)/sizeof(aux[0]);\n",
+    "    for (int i=0;i<s_size;i++) {\n",
+    "        sample[i]=aux[i];\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "for (int i=0; i<s_size;i++) {\n",
     "    TChain *fChain = new TChain(\"mini\");\n",
-    "    fChain = main_HZZAnalysis(parallel,event);\n",
+    "    fChain = main_HZZAnalysis(parallel,sample[i]);\n",
+    "    nEvents = (Int_t)fChain->GetEntries();\n",
+    "    cout << i+1 << \" Data escaneada: \" << sample[i] << \". N-tuplas: \" << nEvents <<endl;\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "IncrementalExecutor::executeFunction: symbol '_ZN5cling7runtime8internal9EvaluateTIvEET_PNS1_15DynamicExprInfoEPN5clang11DeclContextE' unresolved while linking [cling interface function]!\n",
-      "You are probably missing the definition of void cling::runtime::internal::EvaluateT<void>(cling::runtime::internal::DynamicExprInfo*, clang::DeclContext*)\n",
-      "Maybe you need to load the corresponding shared library?\n"
-     ]
-    }
-   ],
-   "source": [
-    "//Banderas\n",
-    "fChain->Scan(); \n",
-    "fChain->Print();"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,6 +251,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total # events = 191126. Events to run = 191126 corresponding to 100% of total events!\n"
+     ]
+    }
+   ],
+   "source": [
+    "int /*nEvents,*/nbytes, i;\n",
+    "\n",
+    "//nEvents = (Int_t)fChain->GetEntries();\n",
+    "\n",
+    "// IMPORTANT: fraction events we want to run\n",
+    "fraction_events = 1;\n",
+    "events_to_run = nEvents*fraction_events;\n",
+    "\n",
+    "cout << \"Total # events = \"  << nEvents\n",
+    "          << \". Events to run = \" << events_to_run\n",
+    "          << \" corresponding to \" << fraction_events*100\n",
+    "          << \"% of total events!\" << endl;"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [
@@ -300,49 +286,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[1minput_line_41:2:10: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1muse of undeclared identifier 'fChain'\u001b[0m\n",
-      " ((Int_t)fChain->GetEntries())\n",
-      "\u001b[0;1;32m         ^\n",
-      "\u001b[0mError in <HandleInterpreterException>: Error evaluating expression ((Int_t)fChain->GetEntries()).\n",
-      "Execution of your code was aborted.\n"
-     ]
-    }
-   ],
-   "source": [
-    "int nEvents,nbytes, i;\n",
-    "\n",
-    "nEvents = (Int_t)fChain->GetEntries();\n",
-    "\n",
-    "// IMPORTANT: fraction events we want to run\n",
-    "fraction_events = 1;\n",
-    "events_to_run = nEvents*fraction_events;\n",
-    "\n",
-    "std::cout << \"Total # events = \"  << nEvents\n",
-    "          << \". Events to run = \" << events_to_run\n",
-    "          << \" corresponding to \" << fraction_events*100\n",
-    "          << \"% of total events!\" << std::endl;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1minput_line_42:2:9: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mexpected ')'\u001b[0m\n",
+      "\u001b[1minput_line_89:2:9: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mexpected ')'\u001b[0m\n",
       " fr (i=0; i < nEvents; i++) //CAMBIAR POR FOR\n",
       "\u001b[0;1;32m        ^\n",
-      "\u001b[0m\u001b[1minput_line_42:2:5: \u001b[0m\u001b[0;1;30mnote: \u001b[0mto match this '('\u001b[0m\n",
+      "\u001b[0m\u001b[1minput_line_89:2:5: \u001b[0m\u001b[0;1;30mnote: \u001b[0mto match this '('\u001b[0m\n",
       " fr (i=0; i < nEvents; i++) //CAMBIAR POR FOR\n",
       "\u001b[0;1;32m    ^\n",
-      "\u001b[0m\u001b[1minput_line_42:2:27: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mexpected ';' after expression\u001b[0m\n",
+      "\u001b[0m\u001b[1minput_line_89:2:27: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mexpected ';' after expression\u001b[0m\n",
       " fr (i=0; i < nEvents; i++) //CAMBIAR POR FOR\n",
       "\u001b[0;1;32m                          ^\n",
       "\u001b[0m\u001b[0;32m                          ;\n",
-      "\u001b[0m\u001b[1minput_line_42:2:27: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mexpected expression\u001b[0m\n"
+      "\u001b[0m\u001b[1minput_line_89:2:27: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mexpected expression\u001b[0m\n"
      ]
     }
    ],
@@ -588,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
