--- a/Test_Analysis.ipynb
+++ b/Test_Analysis.ipynb
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -140,8 +140,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Opening connections to workers: 1 out of 2 (50 %)\r",
-      "Opening connections to workers: OK (2 workers)                 \n"
+      "Opening connections to workers: OK (2 workers)                 \n",
+      "Setting up worker servers: 1 out of 2 (50 %)\r"
      ]
     },
     {
@@ -155,21 +155,61 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Setting up worker servers: OK (2 workers)                 \n",
-      "\u001b[1minput_line_84:2:3: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1muse of undeclared identifier 'scaleFactor_ELE'\u001b[0m\n",
-      " (scaleFactor_ELE * scaleFactor_MUON * scaleFactor_LepTRIGGER * scaleFac...\n",
-      "\u001b[0;1;32m  ^\n",
-      "\u001b[0m\u001b[1minput_line_84:2:21: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1muse of undeclared identifier 'scaleFactor_MUON'\u001b[0m\n",
-      " (scaleFactor_ELE * scaleFactor_MUON * scaleFactor_LepTRIGGER * scaleFac...\n",
-      "\u001b[0;1;32m                    ^\n",
-      "\u001b[0m\u001b[1minput_line_84:2:40: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1muse of undeclared identifier 'scaleFactor_LepTRIGGER'\u001b[0m\n",
-      " (scaleFactor_ELE * scaleFactor_MUON * scaleFactor_LepTRIGGER * scaleFac...\n",
-      "\u001b[0;1;32m                                       ^\n",
-      "\u001b[0m\u001b[1minput_line_84:2:65: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1muse of undeclared identifier 'scaleFactor_PILEUP'\u001b[0m\n",
-      " (scaleFactor_ELE * scaleFactor_MUON * scaleFactor_LepTRIGGER * scaleFac...\n",
-      "\u001b[0;1;32m                                                                ^\n",
-      "\u001b[0mError in <HandleInterpreterException>: Error evaluating expression (scaleFactor_ELE * scaleFactor_MUON * scaleFactor_LepTRIGGER * scaleFactor_PILEUP).\n",
-      "Execution of your code was aborted.\n"
+      "Setting up worker servers: OK (2 workers)                 \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 Data escaneada: data\n",
+      "Total # events = 832. Events to run = 832 corresponding to 100% of total events!\n",
+      "2 Data escaneada: ZqqZll\n",
+      "Total # events = 254. Events to run = 254 corresponding to 100% of total events!\n",
+      "3 Data escaneada: WqqZll\n",
+      "Total # events = 1316619. Events to run = 1316619 corresponding to 100% of total events!\n",
+      "4 Data escaneada: WpqqWmlv\n",
+      "Total # events = 13375. Events to run = 13375 corresponding to 100% of total events!\n",
+      "5 Data escaneada: WplvWmqq\n",
+      "Total # events = 14245. Events to run = 14245 corresponding to 100% of total events!\n",
+      "6 Data escaneada: WlvZqq\n",
+      "Total # events = 28199. Events to run = 28199 corresponding to 100% of total events!\n",
+      "7 Data escaneada: llll\n",
+      "Total # events = 554279. Events to run = 554279 corresponding to 100% of total events!\n",
+      "8 Data escaneada: lllv\n",
+      "Total # events = 9340. Events to run = 9340 corresponding to 100% of total events!\n",
+      "9 Data escaneada: llvv\n",
+      "Total # events = 137. Events to run = 137 corresponding to 100% of total events!\n",
+      "10 Data escaneada: lvvv\n",
+      "Total # events = 11789. Events to run = 11789 corresponding to 100% of total events!\n",
+      "11 Data escaneada: Zee\n",
+      "Total # events = 898. Events to run = 898 corresponding to 100% of total events!\n",
+      "12 Data escaneada: Zmumu\n",
+      "Total # events = 684. Events to run = 684 corresponding to 100% of total events!\n",
+      "13 Data escaneada: Ztautau\n",
+      "Total # events = 9. Events to run = 9 corresponding to 100% of total events!\n",
+      "14 Data escaneada: single_top_tchan\n",
+      "Total # events = 2. Events to run = 2 corresponding to 100% of total events!\n",
+      "15 Data escaneada: single_antitop_tchan\n",
+      "Total # events = 2. Events to run = 2 corresponding to 100% of total events!\n",
+      "16 Data escaneada: single_top_schan\n",
+      "Total # events = 2. Events to run = 2 corresponding to 100% of total events!\n",
+      "17 Data escaneada: single_antitop_schan\n",
+      "Total # events = 2. Events to run = 2 corresponding to 100% of total events!\n",
+      "18 Data escaneada: single_top_wtchan\n",
+      "Total # events = 56. Events to run = 56 corresponding to 100% of total events!\n",
+      "19 Data escaneada: single_antitop_wtchan\n",
+      "Total # events = 48. Events to run = 48 corresponding to 100% of total events!\n",
+      "20 Data escaneada: ttbar_lep\n",
+      "Total # events = 1031. Events to run = 1031 corresponding to 100% of total events!\n",
+      "21 Data escaneada: Wplusenu\n",
+      "Total # events = 41502. Events to run = 41502 corresponding to 100% of total events!\n",
+      "22 Data escaneada: Wplusmunu\n",
+      "Total # events = 35184. Events to run = 35184 corresponding to 100% of total events!\n",
+      "23 Data escaneada: Wplustaunu\n",
+      "Total # events = 1774. Events to run = 1774 corresponding to 100% of total events!\n",
+      "24 Data escaneada: Wminusenu\n",
+      "Total # events = 31893. Events to run = 31893 corresponding to 100% of total events!\n"
      ]
     }
    ],
@@ -213,28 +253,28 @@
     "// IMPORTANT: fraction events we want to run\n",
     "float fraction_events = 1;\n",
     "\n",
-    "int nbytes; //PUEDE SER BORRADO\n",
+    "//int nbytes; //PUEDE SER BORRADO\n",
     "for (int i=0; i<s_size;i++) {\n",
     "    //int events_to_run,nbytes;\n",
     "    TChain *fChain = new TChain(\"mini\");\n",
     "    fChain = main_HZZAnalysis(parallel,sample[i]);\n",
     "    nEvents = (Int_t)fChain->GetEntries();\n",
     "    events_to_run = nEvents*fraction_events;\n",
-    "    j=i;\n",
-    "    /*cout<< i+1 << \" Data escaneada: \" << sample[i] <<endl;\n",
+    "    //j=i;\n",
+    "    cout<< i+1 << \" Data escaneada: \" << sample[i] <<endl;\n",
     "    cout<< \"Total # events = \"  << nEvents\n",
     "        << \". Events to run = \" << events_to_run\n",
     "        << \" corresponding to \" << fraction_events*100\n",
-    "        << \"% of total events!\" << endl;*/\n",
+    "        << \"% of total events!\" << endl;\n",
     "    \n",
-    "    for (int i=0; i < events_to_run; i++) {\n",
+    "    /*for (int i=0; i < events_to_run; i++) {\n",
     "        nbytes = fChain->GetEntry(i);\n",
     "        //Scale factors\n",
     "        Float_t scaleFactor = scaleFactor_ELE*scaleFactor_MUON*scaleFactor_LepTRIGGER*scaleFactor_PILEUP;\n",
     "\n",
     "        //MC weight\n",
     "        Float_t m_mcWeight = mcWeight;\n",
-    "    }\n",
+    "    }*/\n",
     "}"
    ]
   },
@@ -248,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,23 +313,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1minput_line_87:2:6: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mredefinition of 'nbytes'\u001b[0m\n",
-      " int nbytes;\n",
-      "\u001b[0;1;32m     ^\n",
-      "\u001b[0m\u001b[1minput_line_36:41:5: \u001b[0m\u001b[0;1;30mnote: \u001b[0mprevious definition is here\u001b[0m\n",
-      "int nbytes; //PUEDE SER BORRADO\n",
-      "\u001b[0;1;32m    ^\n",
-      "\u001b[0m"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "int nbytes;\n",
     "cout<< \"Contador: \" <<j+1 << \". Data escaneada: \" << sample[j] << \". Número de entradas: \" << events_to_run <<endl;\n",
@@ -510,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
