--- a/Test_Analysis.ipynb
+++ b/Test_Analysis.ipynb
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,19 @@
       "23 Data escaneada: Wplustaunu\n",
       "Total # events = 1774. Events to run = 1774 corresponding to 100% of total events!\n",
       "24 Data escaneada: Wminusenu\n",
-      "Total # events = 31893. Events to run = 31893 corresponding to 100% of total events!\n"
+      "Total # events = 31893. Events to run = 31893 corresponding to 100% of total events!\n",
+      "25 Data escaneada: Wminusmunu\n",
+      "Total # events = 30307. Events to run = 30307 corresponding to 100% of total events!\n",
+      "26 Data escaneada: Wminustaunu\n",
+      "Total # events = 1409. Events to run = 1409 corresponding to 100% of total events!\n",
+      "27 Data escaneada: ggH125_ZZ4lep\n",
+      "Total # events = 164716. Events to run = 164716 corresponding to 100% of total events!\n",
+      "28 Data escaneada: ZH125_ZZ4lep\n",
+      "Total # events = 14485. Events to run = 14485 corresponding to 100% of total events!\n",
+      "29 Data escaneada: WH125_ZZ4lep\n",
+      "Total # events = 15379. Events to run = 15379 corresponding to 100% of total events!\n",
+      "30 Data escaneada: VBF125_ZZ4lep\n",
+      "Total # events = 191126. Events to run = 191126 corresponding to 100% of total events!\n"
      ]
     }
    ],
@@ -288,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,9 +325,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Contador: 1. Data escaneada: data. Número de entradas: 191126\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1minput_line_87:2:3: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1muse of undeclared identifier 'fChain'\u001b[0m\n",
+      " (fChain->GetEntry(((*(int*)0x7f486abe8a44))))\n",
+      "\u001b[0;1;32m  ^\n",
+      "\u001b[0mError in <HandleInterpreterException>: Error evaluating expression (fChain->GetEntry(((*(int*)0x7f486abe8a44)))).\n",
+      "Execution of your code was aborted.\n"
+     ]
+    }
+   ],
    "source": [
     "int nbytes;\n",
     "cout<< \"Contador: \" <<j+1 << \". Data escaneada: \" << sample[j] << \". Número de entradas: \" << events_to_run <<endl;\n",
@@ -536,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
