Cabeceras y notas agregadas

--- a/Test_Analysis.ipynb
+++ b/Test_Analysis.ipynb
@@ -6,9 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%cpp -d\n",
-    "#define HZZAnalysis_cxx\n",
-    "#include \"main_HZZAnalysis.C\""
+    "//%%cpp -d //Al parecer ya no es necesario.\n",
+    "#define HZZAnalysis_cxx"
    ]
   },
   {
@@ -26,7 +25,16 @@
     "#include <TStyle.h>\n",
     "#include <TMath.h>\n",
     "#include <TLorentzVector.h>\n",
-    "//#include <TString.h>\n",
+    "\n",
+    "#include <TROOT.h>\n",
+    "#include <TChain.h>\n",
+    "#include <TFile.h>\n",
+    "#include <TSelector.h>\n",
+    "#include <vector>\n",
+    "\n",
+    "#include <TH3.h>\n",
+    "\n",
+    "#include <TString.h>\n",
     "using namespace std;"
    ]
   },
@@ -34,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Headers"
+    "Cabeceras en local."
    ]
   },
   {
@@ -43,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#include \"HZZAnalysis.h\" //Modificado"
+    "#include \"main_HZZAnalysis.C\""
    ]
   },
   {
@@ -52,14 +60,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#include \"HZZAnalysisHistograms.h\" //Modificado"
+    "#include \"HZZAnalysis.h\" //Modificado"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#include \"HZZAnalysisHistograms.h\" //Aún sin modificar"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Es sólo la prueba de corrida sin vaciar el análisis al Notebook."
+    "### Adaptación de run.sh"
    ]
   },
   {
@@ -78,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -125,8 +142,63 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fin. Adaptación de run.sh\n",
+    "### Selección de eventos"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "int nEvents,s_size,j;\n",
+    "TString sample[50] = {};\n",
+    "\n",
+    "if (option == 0) {\n",
+    "    TString aux[] = {\"data\",\"ZqqZll\",\"WqqZll\",\"WpqqWmlv\",\"WplvWmqq\",\"WlvZqq\",\"llll\",\"lllv\",\"llvv\",\"lvvv\",\"Zee\",\"Zmumu\",\"Ztautau\",\"single_top_tchan\",\"single_antitop_tchan\",\"single_top_schan\",\"single_antitop_schan\",\"single_top_wtchan\",\"single_antitop_wtchan\",\"ttbar_lep\",\"Wplusenu\",\"Wplusmunu\",\"Wplustaunu\",\"Wminusenu\",\"Wminusmunu\",\"Wminustaunu\",\"ggH125_ZZ4lep\",\"ZH125_ZZ4lep\",\"WH125_ZZ4lep\",\"VBF125_ZZ4lep\"};\n",
+    "    s_size = sizeof(aux)/sizeof(aux[0]);\n",
+    "    for (int i=0;i<s_size;i++) {\n",
+    "        sample[i]=aux[i];\n",
+    "    }\n",
+    "} //La opción cero se puede implementar en las seguientes estructuras (Aún no lo he plateado, en mente: Asignación dinámica de arreglos)\n",
+    "if (option == 1) {\n",
+    "    TString aux[] = {\"data\"};\n",
+    "    s_size = sizeof(aux)/sizeof(aux[0]);\n",
+    "    for (int i=0;i<s_size;i++) {\n",
+    "        sample[i]=aux[i];\n",
+    "    }\n",
+    "}\n",
+    "if (option == 2) {\n",
+    "    TString aux[] = {\"ZqqZll\",\"WqqZll\",\"WpqqWmlv\",\"WplvWmqq\",\"WlvZqq\",\"llll\",\"lllv\",\"llvv\",\"lvvv\",\"Zee\",\"Zmumu\",\"Ztautau\"};\n",
+    "    s_size = sizeof(aux)/sizeof(aux[0]);\n",
+    "    for (int i=0;i<s_size;i++) {\n",
+    "        sample[i]=aux[i];\n",
+    "    }\n",
+    "}\n",
+    "if (option == 3) {\n",
+    "    TString aux[] = {\"single_top_tchan\",\"single_antitop_tchan\",\"single_top_schan\",\"single_antitop_schan\",\"single_top_wtchan\",\"single_antitop_wtchan\",\"ttbar_lep\",\"Wplusenu\",\"Wplusmunu\",\"Wplustaunu\",\"Wminusenu\",\"Wminusmunu\",\"Wminustaunu\",\"ggH125_ZZ4lep\",\"ZH125_ZZ4lep\",\"WH125_ZZ4lep\",\"VBF125_ZZ4lep\"};\n",
+    "    s_size = sizeof(aux)/sizeof(aux[0]);\n",
+    "    for (int i=0;i<s_size;i++) {\n",
+    "        sample[i]=aux[i];\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fin. Selección de eventos\n",
+    "### Número de eventos a correr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -140,8 +212,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Opening connections to workers: OK (2 workers)                 \n",
-      "Setting up worker servers: 1 out of 2 (50 %)\r"
+      "Opening connections to workers: 1 out of 2 (50 %)\r",
+      "Opening connections to workers: OK (2 workers)                 \n"
      ]
     },
     {
@@ -155,6 +227,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "Setting up worker servers: 1 out of 2 (50 %)\r",
       "Setting up worker servers: OK (2 workers)                 \n"
      ]
     },
@@ -226,39 +299,6 @@
     }
    ],
    "source": [
-    "// Selección de eventos:\n",
-    "int nEvents,s_size,j;\n",
-    "TString sample[50] = {};\n",
-    "\n",
-    "if (option == 0) {\n",
-    "    TString aux[] = {\"data\",\"ZqqZll\",\"WqqZll\",\"WpqqWmlv\",\"WplvWmqq\",\"WlvZqq\",\"llll\",\"lllv\",\"llvv\",\"lvvv\",\"Zee\",\"Zmumu\",\"Ztautau\",\"single_top_tchan\",\"single_antitop_tchan\",\"single_top_schan\",\"single_antitop_schan\",\"single_top_wtchan\",\"single_antitop_wtchan\",\"ttbar_lep\",\"Wplusenu\",\"Wplusmunu\",\"Wplustaunu\",\"Wminusenu\",\"Wminusmunu\",\"Wminustaunu\",\"ggH125_ZZ4lep\",\"ZH125_ZZ4lep\",\"WH125_ZZ4lep\",\"VBF125_ZZ4lep\"};\n",
-    "    s_size = sizeof(aux)/sizeof(aux[0]);\n",
-    "    for (int i=0;i<s_size;i++) {\n",
-    "        sample[i]=aux[i];\n",
-    "    }\n",
-    "}\n",
-    "if (option == 1) {\n",
-    "    TString aux[] = {\"data\"};\n",
-    "    s_size = sizeof(aux)/sizeof(aux[0]);\n",
-    "    for (int i=0;i<s_size;i++) {\n",
-    "        sample[i]=aux[i];\n",
-    "    }\n",
-    "}\n",
-    "if (option == 2) {\n",
-    "    TString aux[] = {\"ZqqZll\",\"WqqZll\",\"WpqqWmlv\",\"WplvWmqq\",\"WlvZqq\",\"llll\",\"lllv\",\"llvv\",\"lvvv\",\"Zee\",\"Zmumu\",\"Ztautau\"};\n",
-    "    s_size = sizeof(aux)/sizeof(aux[0]);\n",
-    "    for (int i=0;i<s_size;i++) {\n",
-    "        sample[i]=aux[i];\n",
-    "    }\n",
-    "}\n",
-    "if (option == 3) {\n",
-    "    TString aux[] = {\"single_top_tchan\",\"single_antitop_tchan\",\"single_top_schan\",\"single_antitop_schan\",\"single_top_wtchan\",\"single_antitop_wtchan\",\"ttbar_lep\",\"Wplusenu\",\"Wplusmunu\",\"Wplustaunu\",\"Wminusenu\",\"Wminusmunu\",\"Wminustaunu\",\"ggH125_ZZ4lep\",\"ZH125_ZZ4lep\",\"WH125_ZZ4lep\",\"VBF125_ZZ4lep\"};\n",
-    "    s_size = sizeof(aux)/sizeof(aux[0]);\n",
-    "    for (int i=0;i<s_size;i++) {\n",
-    "        sample[i]=aux[i];\n",
-    "    }\n",
-    "}\n",
-    "\n",
     "//Número de eventos a correr. \n",
     "int events_to_run; //OJO,se estan considerado como variables globales.\n",
     "\n",
@@ -294,13 +334,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Fin. Número de eventos a correr\n",
+    "### .\n",
     "OJO No se está llamando nada de \"analysis.h\", por eso los errores.\n",
-    "De acá en adelante sólo se está considerando el ultimo evento."
+    "De acá en adelante sólo se está considerando el ultimo evento que sale del \"Número de eventos a correr\"."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -339,10 +381,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[1minput_line_87:2:3: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1muse of undeclared identifier 'fChain'\u001b[0m\n",
-      " (fChain->GetEntry(((*(int*)0x7f486abe8a44))))\n",
+      "\u001b[1minput_line_90:2:3: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1muse of undeclared identifier 'fChain'\u001b[0m\n",
+      " (fChain->GetEntry(((*(int*)0x7f55db1bfa44))))\n",
       "\u001b[0;1;32m  ^\n",
-      "\u001b[0mError in <HandleInterpreterException>: Error evaluating expression (fChain->GetEntry(((*(int*)0x7f486abe8a44)))).\n",
+      "\u001b[0mError in <HandleInterpreterException>: Error evaluating expression (fChain->GetEntry(((*(int*)0x7f55db1bfa44)))).\n",
       "Execution of your code was aborted.\n"
      ]
     }
@@ -567,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
